Version 6.0.15 - 2022-02-16
* Bug fixes (see mercurial logs for details)

Version 6.0.14 - 2022-02-01
* Bug fixes (see mercurial logs for details)

Version 6.0.13 - 2022-01-01
* Bug fixes (see mercurial logs for details)

Version 6.0.12 - 2021-12-03
* Bug fixes (see mercurial logs for details)

Version 6.0.11 - 2021-11-20
* Bug fixes (see mercurial logs for details)

Version 6.0.10 - 2021-11-04
* Bug fixes (see mercurial logs for details)

Version 6.0.9 - 2021-10-15
* Bug fixes (see mercurial logs for details)

Version 6.0.8 - 2021-10-01
* Bug fixes (see mercurial logs for details)

Version 6.0.7 - 2021-09-16
* Bug fixes (see mercurial logs for details)

Version 6.0.6 - 2021-09-01
* Bug fixes (see mercurial logs for details)

Version 6.0.5 - 2021-08-05
* Bug fixes (see mercurial logs for details)

Version 6.0.4 - 2021-07-21
* Bug fixes (see mercurial logs for details)

Version 6.0.3 - 2021-07-01
* Bug fixes (see mercurial logs for details)

Version 6.0.2 - 2021-05-15
* Bug fixes (see mercurial logs for details)

Version 6.0.1 - 2021-05-07
* Bug fixes (see mercurial logs for details)

Version 6.0.0 - 2021-05-03
* Bug fixes (see mercurial logs for details)
* Allow column sql types to be tested from the table handler
* Add support for database connection parameters to configuration URI
* Use immutable datastructures for Dict and MultiSelection fields
* Skip warnings for non-interactive operations
* Check rule only if _check_access is set
* Add statistics to Cache
* Add support for avatars
* Add status command
* Add document widget on form view
* Add full text and similarity search and FullText field
* Add URL type to icon
* Use instance method to get next sequence value
* Store the sequence type directly on sequence
* Allow sending email with record's attachments
* Add which records to use for actions
* Add parent to group to inherit accesses
* Add __access__ to Model
* Add route wrapper to allow null origin
* Add header grouping on report